--- a/TimeSheetApp/SelectCalendarItems.xaml
+++ b/TimeSheetApp/SelectCalendarItems.xaml
@@ -4,18 +4,26 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:TimeSheetApp"
-      mc:Ignorable="d" 
-      Title="SelectCalendarItems" Height="222.603" Width="384.942" ShowInTaskbar="False" ResizeMode="NoResize" SizeToContent="WidthAndHeight" Topmost="True" WindowStartupLocation="CenterOwner">
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+        xmlns:mvvm="http://www.galasoft.ch/mvvmlight"
+        mc:Ignorable="d" 
+      Title="Записи календаря" ShowInTaskbar="False" ResizeMode="NoResize" SizeToContent="WidthAndHeight" Topmost="True" WindowStartupLocation="CenterOwner" Icon="Resource/calendar.png" WindowStyle="ToolWindow">
 
-    <Grid DataContext="{Binding Source={StaticResource Locator}, Path=Main}">
-        <ListView ItemsSource="{Binding CalendarItem}">
+    <Grid DataContext="{Binding Source={StaticResource Locator}, Path=Main}" Margin="10">
+        <ListView ItemsSource="{Binding CalendarItems}"
+                  SelectedItem="{Binding CurrentCalendarItem}"
+                  MouseDoubleClick="ListView_MouseDoubleClick">
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="MouseDoubleClick">
+                    <mvvm:EventToCommand Command="{Binding SelectCalendarItem}"/>
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
+
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Subject" DisplayMemberBinding="{Binding Subject}"/>
-                    <GridViewColumn Header="start" DisplayMemberBinding="{Binding StartTime, StringFormat={}{0:dd.MM.yyyy HH:mm}}"/>
-                    <GridViewColumn Header="end" DisplayMemberBinding="{Binding EndTime, StringFormat={}{0:dd.MM.yyyy HH:mm}}"/>
-
-
+                    <GridViewColumn Header="Тема" DisplayMemberBinding="{Binding Subject}"/>
+                    <GridViewColumn Header="Начало" DisplayMemberBinding="{Binding StartTime, StringFormat={}{0:dd.MM.yyyy HH:mm}}"/>
+                    <GridViewColumn Header="Окончание" DisplayMemberBinding="{Binding EndTime, StringFormat={}{0:dd.MM.yyyy HH:mm}}"/>
                 </GridView>
             </ListView.View>
         </ListView>
