Первая часть перестройки

--- a/TimeSheetApp/MainWindow.xaml
+++ b/TimeSheetApp/MainWindow.xaml
@@ -201,40 +201,20 @@
 
                         <StackPanel Grid.Row="2" Margin="0,10,0,0" DataContext="{Binding Main, Source={StaticResource Locator}}">
                             <Label Content="Бизнес подразделение" FontWeight="Bold"/>
-                            <xctk:CheckComboBox Name="businessCombo" Height="30" DisplayMemberPath="BusinessBlockName"  ItemsSource="{Binding BusinessBlock}" SelectedItemsOverride="{Binding NewBusinessBlockChoiceCollection}" Delimiter=", " IsSelectAllActive="True" IsTextSearchCaseSensitive="True">
-                                <i:Interaction.Triggers>
-                                    <i:EventTrigger EventName="ItemSelectionChanged">
-                                        <mvvm:EventToCommand Command="{Binding StoreSelection}"/>
-                                    </i:EventTrigger>
-                                </i:Interaction.Triggers>
+                            <xctk:CheckComboBox Name="businessCombo" Height="30" DisplayMemberPath="BusinessBlockName"  ItemsSource="{Binding BusinessBlock}" SelectedItemsOverride="{Binding BusinessBlockChoiceCollection}" Delimiter=", " IsSelectAllActive="True" IsTextSearchCaseSensitive="True">
                             </xctk:CheckComboBox>
                             <Label Content="Support" FontWeight="Bold"/>
-                            <xctk:CheckComboBox Height="30" Name="supportCombo" DisplayMemberPath="Name" ItemsSource="{Binding SupportsArr}" SelectedItemsOverride="{Binding NewSupportsChoiceCollection}" IsSelectAllActive="True">
-                                <i:Interaction.Triggers>
-                                    <i:EventTrigger EventName="ItemSelectionChanged">
-                                        <mvvm:EventToCommand Command="{Binding StoreSelection}" CommandParameter="{Binding SupportsChoiceCollection}"/>
-                                    </i:EventTrigger>
-                                </i:Interaction.Triggers>
+                            <xctk:CheckComboBox Height="30" Name="supportCombo" DisplayMemberPath="Name" ItemsSource="{Binding SupportsArr}" SelectedItemsOverride="{Binding SupportsChoiceCollection}" IsSelectAllActive="True">
                             </xctk:CheckComboBox>
                             <Label Content="Клиентские пути" FontWeight="Bold"/>
                             <ComboBox Name="clientWaysCombo" Height="30" DisplayMemberPath="Name" ItemsSource="{Binding ClientWays}" SelectedItem="{Binding NewRecord.ClientWays}" SelectedIndex="0"/>
                             <Label Content="Эскалация" FontWeight="Bold"/>
-                            <xctk:CheckComboBox Name="escalationCombo" Height="30" DisplayMemberPath="Name" ItemsSource="{Binding Escalations}" SelectedItemsOverride="{Binding NewEscalationsChoiceCollection}" IsSelectAllActive="True">
-                                <i:Interaction.Triggers>
-                                    <i:EventTrigger EventName="ItemSelectionChanged">
-                                        <mvvm:EventToCommand Command="{Binding StoreSelection}" CommandParameter="{Binding EscalationsChoiceCollection}"/>
-                                    </i:EventTrigger>
-                                </i:Interaction.Triggers>
+                            <xctk:CheckComboBox Name="escalationCombo" Height="30" DisplayMemberPath="Name" ItemsSource="{Binding Escalations}" SelectedItemsOverride="{Binding EscalationsChoiceCollection}" IsSelectAllActive="True">
                             </xctk:CheckComboBox>
                             <Label Content="Формат" FontWeight="Bold"/>
                             <ComboBox Name="formatCombo" Height="30" DisplayMemberPath="Name" ItemsSource="{Binding FormatList}" SelectedItem="{Binding NewRecord.Formats}" SelectedIndex="0"/>
                             <Label Content="Риск" FontWeight="Bold"/>
-                            <xctk:CheckComboBox Name="riskCombo" Height="30" ItemsSource="{Binding RiskCol}" DisplayMemberPath="RiskName" SelectedItemsOverride="{Binding NewRiskChoiceCollection}" IsSelectAllActive="True">
-                                <i:Interaction.Triggers>
-                                    <i:EventTrigger EventName="ItemSelectionChanged">
-                                        <mvvm:EventToCommand Command="{Binding StoreSelection}" CommandParameter="{Binding RiskChoiceCollection}"/>
-                                    </i:EventTrigger>
-                                </i:Interaction.Triggers>
+                            <xctk:CheckComboBox Name="riskCombo" Height="30" ItemsSource="{Binding RiskCol}" DisplayMemberPath="RiskName" SelectedItemsOverride="{Binding RiskChoiceCollection}" IsSelectAllActive="True">
                             </xctk:CheckComboBox>
 
                             <Button Name="Add" Height="35" Margin="0,10,0,0" 
