--- a/TimeSheetApp/EditForm.xaml
+++ b/TimeSheetApp/EditForm.xaml
@@ -79,42 +79,20 @@
             <xctk:CheckComboBox Name="BusinessList" Grid.Row="3" ItemsSource="{Binding BusinessBlock}" 
                                 DisplayMemberPath="BusinessBlockName" 
                                 SelectedItemsOverride="{Binding BusinessBlockChoiceCollection}">
-                <i:Interaction.Triggers>
-                    <i:EventTrigger EventName="ItemSelectionChanged">
-                        <mvvm:EventToCommand Command="{Binding StoreSelection}"/>
-                    </i:EventTrigger>
-                </i:Interaction.Triggers>
             </xctk:CheckComboBox>
             <xctk:CheckComboBox Name="supportList" Grid.Row="5" 
                                 ItemsSource="{Binding SupportsArr}" 
                                 DisplayMemberPath="Name" 
                                 SelectedItemsOverride="{Binding SupportsChoiceCollection}">
-                <i:Interaction.Triggers>
-                    <i:EventTrigger EventName="ItemSelectionChanged">
-                        <mvvm:EventToCommand Command="{Binding StoreSelection}"/>
-                    </i:EventTrigger>
-                </i:Interaction.Triggers>
             </xctk:CheckComboBox>
             <ComboBox Name="ClientWaysList" Grid.Row="7" ItemsSource="{Binding ClientWays}" DisplayMemberPath="Name" SelectedItem="{Binding EditedRecord.ClientWays}"/>
             <xctk:CheckComboBox Name="EscalationList" Grid.Row="9" 
                                 ItemsSource="{Binding Escalations}" 
                                 DisplayMemberPath="Name" 
-                                SelectedItemsOverride="{Binding EscalationsChoiceCollection}" 
-                                
-                                >
-                <i:Interaction.Triggers>
-                    <i:EventTrigger EventName="ItemSelectionChanged">
-                        <mvvm:EventToCommand Command="{Binding StoreSelection}"/>
-                    </i:EventTrigger>
-                </i:Interaction.Triggers>
+                                SelectedItemsOverride="{Binding EscalationsChoiceCollection}" >
             </xctk:CheckComboBox>
             <ComboBox Name="FormatList" Grid.Row="11" ItemsSource="{Binding FormatList}" DisplayMemberPath="Name" SelectedItem="{Binding EditedRecord.Formats}"/>
             <xctk:CheckComboBox Name="RiskList" Grid.Row="13" ItemsSource="{Binding RiskCol}" DisplayMemberPath="RiskName"  SelectedItemsOverride="{Binding RiskChoiceCollection}">
-                <i:Interaction.Triggers>
-                    <i:EventTrigger EventName="ItemSelectionChanged">
-                        <mvvm:EventToCommand Command="{Binding StoreSelection}"/>
-                    </i:EventTrigger>
-                </i:Interaction.Triggers>
             </xctk:CheckComboBox>
             <StackPanel Grid.Row="14" Margin="0,10,0,10">
 
