--- a/TimeSheetApp/MainWindow.xaml
+++ b/TimeSheetApp/MainWindow.xaml
@@ -117,10 +117,6 @@
                             <RowDefinition Height="9*"/>
                             <RowDefinition Height="7*"/>
                         </Grid.RowDefinitions>
-
-
-
-
                         <StackPanel Grid.Row="0" Orientation="Horizontal">
                                 <Image Source="Resource/calendarIcon.png" HorizontalAlignment="Left"  Margin="25,2,0,2" Width="50"/>
                             <Button Style="{StaticResource SelectableImage}" Name="StartIcon" HorizontalAlignment="Left"  Margin="40,2,0,2" Width="50" Click="TimeIcon_MouseDown">
@@ -196,9 +192,6 @@
                                 </Grid>
                             </Button>
                         </StackPanel>
-
-
-
                         <StackPanel Grid.Row="2" Margin="0,10,0,0" DataContext="{Binding Main, Source={StaticResource Locator}}">
                             <Label Content="Бизнес подразделение" FontWeight="Bold"/>
                             <xctk:CheckComboBox Name="businessCombo" Height="30" DisplayMemberPath="BusinessBlockName"  ItemsSource="{Binding BusinessBlock}" SelectedItemsOverride="{Binding BusinessBlockChoiceCollection}" Delimiter=", " IsSelectAllActive="True" IsTextSearchCaseSensitive="True">
@@ -236,8 +229,8 @@
                                 Height="60" 
                                 Text="{Binding NewRecord.Subject, Mode=TwoWay}" 
                                 ItemsSource="{Binding SubjectHints, Mode=OneWay}" 
-                                IgnoreTextChange="{Binding IgnoreSubjectTextChange}"
-                                TextChangedEvent="Subject_TextChangedEvent"/>
+                                IgnoreTextChange="{Binding IgnoreSubjectTextChange}"/>
+                            <!--TextChangedEvent="Subject_TextChangedEvent"/>-->
                             <Label Content="Комментарий" FontSize="16"  Margin="5,0,0,0" FontWeight="Bold"/>
                             <TextBox Name="Comment" Margin="0,0,5,0" Height="150" TextWrapping="Wrap" AcceptsReturn="True" 
                          Text="{Binding NewRecord.Comment}"/>
@@ -262,13 +255,10 @@
                                 <ContextMenu>
                                     <MenuItem Header="Выбрать время до" Click="SelectTimeBeforeClick"/>
                                     <MenuItem Header="Выбрать время после" Click="SelectTimeAfterClick"/>
-
-
                                 </ContextMenu>
                             </ListView.ContextMenu>
                             <ListView.View>
                                 <GridView>
-
                                     <GridViewColumn Header="Start" Width="50" DisplayMemberBinding="{Binding Path=TimeStart, StringFormat={}{0:HH:mm}}"/>
                                     <GridViewColumn Header="End" Width="50" DisplayMemberBinding="{Binding Path=TimeEnd, StringFormat={}{0:HH:mm}}"/>
                                     <GridViewColumn Header="Процесс" Width="50" >
@@ -310,14 +300,65 @@
                                 </GridView>
                             </ListView.View>
                         </ListView>
-                        
                         <StackPanel Orientation="Horizontal" Margin="20,5,0,0" Grid.Row="1">
-                            
                             <Image Source="Resource/timerIcon.png" Width="25" VerticalAlignment="Center"/>
                             <TextBlock Text="{Binding TotalDurationInMinutes, StringFormat=Общая длительность {0:hh\\:mm}}"  FontSize="18" VerticalAlignment="Center"/>
-                            
                         </StackPanel>
-
+                    </Grid>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Личный кабинет">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="300*"/>
+                        <ColumnDefinition Width="500*"/>
+                    </Grid.ColumnDefinitions>
+                    <StackPanel>
+                        <StackPanel Orientation="Horizontal" Margin="10,5">
+                            <Image Source="Resource/User.png" Width="50"/>
+                            <TextBlock Text="ФИО: " VerticalAlignment="Center" MaxWidth="215" TextWrapping="WrapWithOverflow"/>
+                            <TextBlock Name="UserNameLabel" Text="{Binding Source={StaticResource Locator}, Path=Main.CurrentUserFullName}" VerticalAlignment="Center" MaxWidth="215" TextWrapping="WrapWithOverflow" Visibility="Visible"/>
+                            <TextBox Name="EditUserName" KeyDown="EditUserName_KeyDown" Text="{Binding Source={StaticResource Locator}, Path=Main.CurrentUserFullName}" 
+                                     VerticalAlignment="Center" IsReadOnly="True" BorderBrush="{x:Null}" MaxWidth="215" TextWrapping="WrapWithOverflow" 
+                                     Visibility="Collapsed"/>
+                            <Button Name="editUserNameBtn" Margin="10,0,0,0" Height="20" BorderBrush="{x:Null}" Background="{x:Null}" Click="EditUserNameBtn_Click">
+                                <Image Source="Resource/Edit.png"/>
+                            </Button>
+                        </StackPanel>
+                        <GroupBox Margin="10,5" Header="Подразделение" FontSize="10" Foreground="#FF686868">
+                            <StackPanel>
+                                <TextBlock Text="Департамент: Департамент Комплаенс контроля" Foreground="#FF1E1E1E"/>
+                                <TextBlock Text="Дирекция: Отсутствует" Foreground="#FF1E1E1E"/>
+                                <TextBlock Text="Управление: Отсутствует" Foreground="#FF1E1E1E"/>
+                                <TextBlock Text="Отдел: ОРППА" Foreground="#FF1E1E1E"/>
+                            </StackPanel>
+                        </GroupBox>
+                        <GroupBox Margin="10,5" Header="Доступы"  FontSize="10" Foreground="#FF686868">
+                            <TextBlock Text="Роль в системе: Администратор" Foreground="#FF1E1E1E"/>
+                        </GroupBox>
+                    </StackPanel>
+                    <Grid Grid.Column="1" Margin="0,10,5,10">
+                        <StackPanel>
+                            <GroupBox Header="Аналитика" FontSize="10" Foreground="#FF686868">
+                                <StackPanel>
+                                    <TextBlock Text="Активность за прошлый месяц: 138.5ч (отработано 19 дней)" Foreground="#FF1E1E1E" Margin="0,2"/>
+                                    <TextBlock Text="Активность за прошлую неделю: 38,5ч (отработано 4 дня)" Foreground="#FF1E1E1E" Margin="0,2"/>
+                                    <TextBlock Text="Активность за сегодня: 5,5ч" Foreground="#FF1E1E1E" Margin="0,2"/>
+                                </StackPanel>
+                            </GroupBox>
+                            <GroupBox Header="Команда" FontSize="10" Foreground="#FF686868">
+                                <StackPanel>
+                                    <ListView  MinHeight="200" Grid.Row="1" SelectedIndex="0" FontSize="10" BorderBrush="{x:Null}" ScrollViewer.CanContentScroll="False" ScrollViewer.VerticalScrollBarVisibility="Auto" Foreground="Black" Background="{x:Null}">
+                                        <ListView.View>
+                                            <GridView>
+                                                <GridViewColumn Header="ФИО" Width="200"/>
+                                                <GridViewColumn Header="Должность" Width="150"/>
+                                            </GridView>
+                                        </ListView.View>
+                                    </ListView>
+                                </StackPanel>
+                            </GroupBox>
+                        </StackPanel>
                     </Grid>
                 </Grid>
             </TabItem>
