--- a/TimeSheetApp/MainWindow.xaml
+++ b/TimeSheetApp/MainWindow.xaml
@@ -318,9 +318,16 @@
                             <Image Source="Resource/User.png" Width="50"/>
                             <TextBlock Text="ФИО: " VerticalAlignment="Center" MaxWidth="215" TextWrapping="WrapWithOverflow"/>
                             <TextBlock Name="UserNameLabel" Text="{Binding Source={StaticResource Locator}, Path=Main.CurrentUserFullName}" VerticalAlignment="Center" MaxWidth="215" TextWrapping="WrapWithOverflow" Visibility="Visible"/>
-                            <TextBox Name="EditUserName" KeyDown="EditUserName_KeyDown" Text="{Binding Source={StaticResource Locator}, Path=Main.CurrentUserFullName}" 
-                                     VerticalAlignment="Center" IsReadOnly="True" BorderBrush="{x:Null}" MaxWidth="215" TextWrapping="WrapWithOverflow" 
-                                     Visibility="Collapsed"/>
+                            <TextBox Name="EditUserName" LostFocus="EditUserName_LostFocus" KeyDown="EditUserName_KeyDown" Text="{Binding Source={StaticResource Locator}, Path=Main.CurrentUserFullName}" 
+                                     VerticalAlignment="Center" BorderBrush="{x:Null}" MaxWidth="215" TextWrapping="WrapWithOverflow" 
+                                     Visibility="Collapsed">
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="TextChanged">
+                                        <mvvm:EventToCommand Command="{Binding FinilizeEditUserName}"
+                                                             CommandParameter="{Binding ElementName=EditUserName, Path=Text}"/>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+                            </TextBox>
                             <Button Name="editUserNameBtn" Margin="10,0,0,0" Height="20" BorderBrush="{x:Null}" Background="{x:Null}" Click="EditUserNameBtn_Click">
                                 <Image Source="Resource/Edit.png"/>
                             </Button>
